--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
 
     <!-- JS -->
     <script src="./assets/js/global.js" type="module"></script>
-    <script src="./assets/js/home.js" type="module"></script>
-    
-    <!-- Adsense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2137123805573195"
-     crossorigin="anonymous"></script>
+    <script src="./assets/js/home.js" type="module"></script
 </head>
 
 <body>
@@ -136,20 +132,6 @@
                     <p class="label-medium">Search any recipe e.g: burger, pizza, sandwich, toast.</p>
                 </div>
             </section>
-            
-            <!-- Ad -->
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2137123805573195"
-                 crossorigin="anonymous"></script>
-<!-- Banner Ad -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2137123805573195"
-                 data-ad-slot="3423830291"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
 
             <!-- TAB -->
 
