Obfuscated 'Api.js' because of personal details.
I have obfuscated the file 'Api.js' because it was having the 'API_KEY' which is not a part to share.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- JS -->
     <script src="./assets/js/global.js" type="module"></script>
-    <script src="./assets/js/home.js" type="module"></script
+    <script src="./assets/js/home.js" type="module"></script>
 </head>
 
 <body>
